fix: adjust sidebar scroll spacing

--- a/src/renderer/src/components/sidebar/sidebar.scss
+++ b/src/renderer/src/components/sidebar/sidebar.scss
@@ -48,10 +48,9 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    padding: 0 calc(globals.$spacing-unit * 2) calc(globals.$spacing-unit * 2);
+    padding: 0 calc(globals.$spacing-unit * 2);
     gap: calc(globals.$spacing-unit * 2);
     width: 100%;
-    overflow: hidden;
     min-height: 0;
   }
 
@@ -82,8 +81,9 @@
 
   &__game-list-scroll {
     position: absolute;
-    inset: 0;
+    inset: 0 0 6px;
     overflow-y: auto;
+    padding-bottom: calc(globals.$spacing-unit * 2);
   }
 
   &__handle {
